# LearnScript

./: .gitignore
1.shell/: 01.env.md  02.variable.md  03.string.md  04.array.md  05.operators.md  06.flow_control.md  07.function.md  08.redirect.md  09.brackets.md  10.regex.md  11.commands.md  doc.md
1.shell/demo/: echo_color.sh  if_multi_cond.sh  os_detect.sh
2.python/2.Tools/numpy/: numpyDemo.py
2.python/2.Tools/packaging_tool/: readme.md
3.cmake/: ReadMe.md
3.cmake/02.mDemo/: CMakeLists.txt
3.cmake/02.mDemo/cmake/: compile.cmake  custom.cmake
3.cmake/02.mDemo/cmake/toolchains/: riscv64-linux-gnu.cmake  x86_64-linux-gnu.cmake
3.cmake/02.mDemo/src/: CMakeLists.txt  main.c  version_info.c  version_info.h
3.cmake/03.mDemo_object/: calc2.c  main.c  prjBuild.sh
3.cmake/mDemo/: CMakeLists.txt  prjBuild.sh
3.cmake/mDemo/cmake/: custom.cmake  func_macro.cmake  utils.cmake  variable.cmake  work_flow_ctrl.cmake
3.cmake/mDemo/cmake/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
3.cmake/mDemo/src/math/: CMakeLists.txt
3.cmake/mDemo_object/: CMakeLists.txt  calc1.c  info.c
4.makefile/demo/: Makefile  demo.c  demo2.c
4.makefile/demo3_auto_var/: Makefile  readMe.md
4.makefile/demo3_auto_var/include/: io.h  math.h
4.makefile/demo3_auto_var/src/: io.c  main.c  math.c
4.makefile/demo4_rule/: Makefile  readMe.md
4.makefile/demo4_rule/include/: util.h
4.makefile/demo4_rule/src/: main.c  util.c
6.android_build/tool_ndk/: CMakeLists.txt  README.md  main.c  main.cpp  prjBuild.sh
